test/data/resolver/valid/delete_rich_expression_with_param.cypher
MATCH (n:Person) DELETE nodes($p)
