test/data/resolver/invalid/delete_projection_alias.cypher
MATCH (n:Person) WITH count(n) AS c DELETE c
